--- a/mvc/ReactApp/public/index.html
+++ b/mvc/ReactApp/public/index.html
@@ -23,6 +23,11 @@
     <title>temp_react</title>
   </head>
   <body>
+
+    <header class="admin-header">
+      <h1>Blåatoppens dagblad - Admin</h1>
+  </header>
+
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
